[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysio-hermes-tmsi"
dynamic = ["version"]
requires-python = ">=3.7"
authors = [
  { name="Maxim Yudayev", email="maxim.yudayev@gmail.com" },
  { name="e-Media Research Lab @ KU Leuven" },
]
description = "A TMSi SAGA support module for HERMES"
keywords = ["embedded ai", "wearables", "sensors", "saga", "tmsi", "streaming", "realtime processing", "physiology"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: System :: Distributed Computing"
]
dependencies = [
  "pysio-hermes",
  # "pysio-tmsi"
]

[tool.setuptools.dynamic]
version = {attr = "hermes.tmsi.__version__.__version__"}

[project.urls]
Homepage = "https://maximyudayev.github.io/hermes"
Documentation = "https://maximyudayev.github.io/hermes"
Repository = "https://github.com/maximyudayev/hermes-tmsi.git"
Issues = "https://github.com/maximyudayev/hermes/issues"
Changelog = "https://github.com/maximyudayev/hermes-tmsi/blob/main/CHANGELOG.md"
